--- a/html/balls/beachball.html
+++ b/html/balls/beachball.html
@@ -1624,7 +1624,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1658,7 +1658,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1668,7 +1668,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1678,7 +1678,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1692,7 +1692,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1702,7 +1702,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1712,7 +1712,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
