--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -8,7 +8,7 @@
     <title>足球</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../../js/javascript.js"></script>
-    <link rel="stylesheet" href="../../css_2/style.css">
+    <link class="elseStyle" rel="stylesheet" href="../../css_2/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
@@ -1623,7 +1623,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1657,7 +1657,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1667,7 +1667,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1677,7 +1677,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1691,7 +1691,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1701,7 +1701,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1711,7 +1711,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1799,7 +1799,7 @@
                         <table class="bettingBoard">
                             <tr>
                                 <td>2021/03/03 14:30:08</td>
-                                <td class="waiting">等待中...</td>
+                                <td>下注成功</td>
                             </tr>
                             <tr>
                                 <td>M58755837</td>
