--- a/html/balls/teach.html
+++ b/html/balls/teach.html
@@ -1379,7 +1379,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1413,7 +1413,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1423,7 +1423,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1433,7 +1433,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1447,7 +1447,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1457,7 +1457,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1467,7 +1467,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
