--- a/html/balls/baseball.html
+++ b/html/balls/baseball.html
@@ -1650,7 +1650,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1684,7 +1684,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1694,7 +1694,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1704,7 +1704,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1718,7 +1718,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1728,7 +1728,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1738,7 +1738,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
