--- a/html/balls/vball.html
+++ b/html/balls/vball.html
@@ -1760,7 +1760,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1794,7 +1794,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1804,7 +1804,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1814,7 +1814,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1828,7 +1828,7 @@
                                 <p class="games">20</p>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1838,7 +1838,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
@@ -1848,7 +1848,7 @@
                                 </div>
                                 <div class="innerList">
                                     <p>
-                                        <span>俱樂部友誼賽<span class="situation onLive">直播中</span></span>
+                                        <span>俱樂部友誼賽<span class="situation onLive">LIVE</span></span>
                                         <br>
                                         布咸美恩斯 1905
                                         <br>
